--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="camera_x">CameraX</string>
     <string name="camera">Kamera</string>
     <string name="gallery">Galeri</string>
-    <string name="analyze">Analyze</string>
+    <string name="predict">Predict</string>
     <string name="result">Hasil Analisis</string>
     <string name="tflite_initialization_with_gpu_delegate_failed">Tflite Initialization with GPU Delegate failed..</string>
     <string name="permission_granted_will_proceed">Permission Granted. Will Proceed..</string>
@@ -26,4 +26,5 @@
     <string name="something_went_wrong_try_again">Something went wrong, Try Again..</string>
     <string name="author">Author</string>
     <string name="some_interesting_information_about_cancer_that_you_might_want_to_know">Some Interesting Information About Cancer That You Might Want To Know</string>
+    <string name="ambil_foto_untuk_dianalisis">Ambil Foto Untuk Dianalisis</string>
 </resources>
