all ui has been improved

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,5 +72,6 @@
     </string>
     <string name="no_analysis_history_yet">No Analysis History Yet</string>
     <string name="hasil_analisis">Hasil Analisis</string>
+    <string name="write_yout_note_here">Write yout note here....</string>
 
 </resources>
